@@ -1,3 +1,8 @@
+2003-09-08  Rodrigo Moya <rodrigo@ximian.com>
+
+	* pcs/cal-backend-file.c: don't store all recurrences in the
+	private structure.
+	
 2003-09-04  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/e-day-view.c (process_component):
